fix(GlobalStatus): Symmetric horizontal padding on smaller screens (Sbanken) (#3454)
For Sbanken theme

--- a/packages/dnb-eufemia/src/components/global-status/style/themes/dnb-global-status-theme-sbanken.scss
+++ b/packages/dnb-eufemia/src/components/global-status/style/themes/dnb-global-status-theme-sbanken.scss
@@ -10,6 +10,12 @@
     display: none;
   }
 
+  &__title {
+    @include allBelow('large') {
+      padding-right: 2.5rem;
+    }
+  }
+
   &--error &__content .dnb-hr {
     color: var(--sb-color-red);
   }
